# DetroitAutomationAcademy

./: .env.example  .gitignore  .pre-commit-config.yaml  ADMINISTRATIVE_COORDINATION_PLAN.md  ADMIN_COORDINATION_SUMMARY.md.bak  AGENT_TEMPLATE_REVIEW.md  BGC_DASHBOARD_CREATION_SUMMARY.md  BGC_DASHBOARD_SYSTEM_DIAGRAM.txt  BGC_DASHBOARD_VISUAL_GUIDE.md  BGC_EVENT_DASHBOARD_CHECKPOINT.md  BGC_EVENT_DAY2_CALENDAR.ics  BGC_EVENT_DAY2_QUICK_CHECKLIST.md  BGC_EVENT_DAY2_SUMMARY.md  BGC_EVENT_FINAL_PREP.md  BGC_EVENT_READY_CALENDAR.ics  BGC_EVENT_STATUS_DASHBOARD.html  BGC_EVENT_STATUS_DASHBOARD_README_OLD.md  CALENDAR_DEPLOYMENT_SUMMARY.md  CALENDAR_EVENT_VERIFICATION.md  CALENDAR_FEB_MAR_2025.md  CALENDAR_FEB_MAR_2025.md.bak  CALENDAR_IMPORT_REPORT.sh  CALENDAR_IMPORT_STATUS.txt  CALENDAR_IMPORT_SUMMARY.md  COORDINATION_INDEX.md  CTO_EXECUTIVE_SUMMARY.md  CTO_TECHNICAL_ASSESSMENT.md.bak  CTO_TECHNICAL_ROADMAP.md  DAA_FINANCIAL_INDEX.md  DAILY_BRIEF_2026-02-07.md  DELIVERY_SUMMARY.md  DELIVERY_SUMMARY.md.bak  DEPLOYMENT_GUIDE.md  DEV_ENVIRONMENT_SETUP.md  EVALUATION_SUMMARY.md  EVENT_PREP_SUMMARY.md  EXPENSE_MANAGEMENT_FRAMEWORK.md.bak  GOOGLE_CALENDAR_IMPORT_GUIDE.md  GRANT_TRACKING_FRAMEWORK.md  IMPROVEMENTS.md  (+57 more)
.github/: copilot-instructions.md  dependabot.yml
activations/: README.md  laser_cut_circle.gcode  laser_cut_square.gcode  laser_cut_triangle.gcode  skyline_keychain.3mf  skyline_keychain.stl
branding/: ALL_COORDINATION_BRIEF_PROTOTYPE_REVISION.md.bak  BRAND_STRATEGY.md.bak  COLOR_PALETTE_DEVELOPMENT.md  COMPLETION_SUMMARY.md  COORDINATION_COMPLETE.md  README.md  (+16 more)
(+55 files in other folders)
