[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detroit-automation-academy"
version = "0.1.0"
description = "Educational materials and examples for the Detroit Automation Academy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "RPi.GPIO",
    "numpy",
    "matplotlib",
    "pandas",
    "opencv-python",
    "dronekit",
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/smit4786/DetroitAutomationAcademy"
Repository = "https://github.com/smit4786/DetroitAutomationAcademy.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["detroit_automation_academy*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
